--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -6,3 +6,7 @@ body,button,input,select,textarea {font-family:Tahoma,Arial,Roboto,”Droid Sans
 ol,ul{list-style:none;}
 
 .box { width: 100%; height: 100%;overflow: hidden; }
+
+
+.section-1 img{ width: 100%; }
+.section-1 .in-1{ position: absolute; top:0px; bottom: 0; left: 0; right: 0; background: rgba(0,0,0,.6); }
