--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -5,7 +5,7 @@ h1,h2,h3,h4,h5,h6{font-size:100%;}
 body{font-family:Tahoma,Arial,Roboto,”Droid Sans”,”Helvetica Neue”,”Droid Sans Fallback”,”Heiti SC”,sans-self;font-size:62.5%;}
 ol,ul{list-style:none;}
 
-h1{ font-size: 40px; }
+h1{ font-size: 40px; margin-bottom: 50px}
 
 .p-relative{ position: relative }
 .p-absolute{ position: absolute }
@@ -25,4 +25,11 @@ h1{ font-size: 40px; }
   url('../images/iconfont/iconfont.woff') format('woff'),
   url('../images/iconfont/iconfont.ttf') format('truetype'),
   url('../images/iconfont/iconfont.svg#iconfont') format('svg');
+}
+.iconfont {
+  font-family: "iconfont" !important;
+  font-size: 30px;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
