--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -9,11 +9,15 @@ h1{ font-size: 40px; margin-bottom: 50px}
 
 @media screen and (max-width: 1000px) {
   .section-1{ height: 300px!important; }
-  .en-name{ font-size: 20px!important; }
+  .en-name{ font-size: 20px!important; margin: -30px 0 40px 0!important; }
   .item { width: 85%!important; }
-  #note { padding: 50px 15px!important; }
+  #note { padding: 50px 20px!important; }
   .basic{ font-size:15px!important; }
   .section-1 .navs.float .nav{ width: 60px!important; font-size: 15px!important; }
+  .photo{ display: none }
+  .section-1 .nav { width: 60px!important; height: 60px!important; line-height: 60px!important; font-size: 14px!important; }
+  .item-in { height: 5px!important; }
+  .item-title,.item-grade{ font-size: 15px!important; }
 }
 
 .p-relative{ position: relative }
