--- a/src/assets/css/timeline.css
+++ b/src/assets/css/timeline.css
@@ -83,7 +83,7 @@ header h1 {
   position: relative;
   padding: 2em 0;
   margin-top: 2em;
-  margin-bottom: 2em;
+  /*margin-bottom: 2em;*/
 }
 #cd-timeline::before {
   /* this is the vertical line */
@@ -98,7 +98,7 @@ header h1 {
 @media only screen and (min-width: 1170px) {
   #cd-timeline {
     margin-top: 3em;
-    margin-bottom: 3em;
+    /*margin-bottom: 3em;*/
   }
   #cd-timeline::before {
     left: 50%;
